--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@ td:nth-child(even)>span {
 }
 td:last-child>span,
 td:nth-child(6)>span {
-    color: ##6a7ba2;
+    color: #6a7ba2;
 }
 td.avui>span {
     font-weight: bold;
-    background-color: ##6a7ba2;
+    background-color: #6a7ba2;
     color: #fff;
     border: 2px solid rgba(0,0,0,0.1);
 }
@@ -107,7 +107,7 @@ td.fora > span {
     opacity: 0.2;
 }
 td > span:hover {
-    background: #9fafd3;
+    background: #9baacd;
     color: #fff;
 }
 .boto-next, .boto-prev {
