--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ td:last-child, th:last-child {
 th {
     border-top: 1px solid rgba(0,0,0,0.1);
     border-right: 1px solid rgba(0,0,0,0.1);
-    background-color: #6a7ba2;
+    background-color: #778ea6;
     color: #fff;
     text-shadow: 0px -1px 0px rgba(0,0,0,0.2);
     font-weight: normal;
@@ -95,11 +95,11 @@ td:nth-child(even)>span {
 }
 td:last-child>span,
 td:nth-child(6)>span {
-    color: #6a7ba2;
+    color: #778ea6;
 }
 td.avui>span {
     font-weight: bold;
-    background-color: #6a7ba2;
+    background-color: #778ea6;
     color: #fff;
     border: 2px solid rgba(0,0,0,0.1);
 }
@@ -107,7 +107,7 @@ td.fora > span {
     opacity: 0.2;
 }
 td > span:hover {
-    background: #9baacd;
+    background: #a7bcd3;
     color: #fff;
 }
 .boto-next, .boto-prev {
